--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,20 @@ services:
       - "3000:3000"
     depends_on:
       - db
+    environment:
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=nv_test_db
+
   db:
     image: postgres
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: nv_test_db
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=nv_test_db
     ports:
       - "5432:5432"
     volumes:
